# SVAO-Plus-Plus

./: .gitignore  CMakeLists.txt  README.md
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/BilateralBlur/: BilateralBlur.cpp  BilateralBlur.h  BilateralBlur.slang  CMakeLists.txt
Source/RenderPasses/BlinnPhong/: BlinnPhong.cpp  BlinnPhong.h  BlinnPhong.slang  CMakeLists.txt
Source/RenderPasses/Branch/: CMakeLists.txt  DepthBranchPass.cpp  DepthBranchPass.h
Source/RenderPasses/DeferredLighting/: CMakeLists.txt  DeferredLighting.cpp  DeferredLighting.h  DeferredLighting.slang
Source/RenderPasses/GBufferLite/: CMakeLists.txt  DepthPassLite.3d.slang  GBufferLite.3d.slang  GBufferLite.cpp  GBufferLite.h
Source/RenderPasses/HBAO/: CMakeLists.txt  HBAO.cpp  HBAO.h  HBAO.ps.slang  HBAOData.slang
Source/RenderPasses/LinearizeDepth/: CMakeLists.txt  LinearizeDepth.cpp  LinearizeDepth.h  LinearizeDepth.slang
Source/RenderPasses/NNAO/: CMakeLists.txt  NNAO.cpp  NNAO.h  NNAO.slang
Source/RenderPasses/NormalsToViewSpace/: CMakeLists.txt  NormalsToViewSpace.cpp  NormalsToViewSpace.h  NormalsToViewSpace.slang
Source/RenderPasses/RTAO/: RTAO.cpp  RTAO.h  RTAOData.slang  Ray.rt.slang
Source/RenderPasses/RTStochasticDepth/: CMakeLists.txt  Common.slangh  Jitter.slangh  RTStochasticDepth.cpp  RTStochasticDepth.h  StochasticDepthMapRT.rt.slang
Source/RenderPasses/RenderPassTemplate/: CMakeLists.txt
Source/RenderPasses/SSAO/: CMakeLists.txt  SSAO.cpp  SSAO.h  SSAO.slang
Source/RenderPasses/SVAO/: CMakeLists.txt  Common.slang  SVAO.cpp  SVAO.h  VAOBase.cpp  (+4 more)
(+48 files in other folders)
