add_subdirectory(AccumulatePass)
add_subdirectory(BilateralBlur)
add_subdirectory(BlinnPhong)
add_subdirectory(BlitPass)
add_subdirectory(Branch)
add_subdirectory(BSDFOptimizer)
add_subdirectory(BSDFViewer)
add_subdirectory(DebugPasses)
add_subdirectory(DeferredLighting)
add_subdirectory(DLSSPass)
add_subdirectory(ErrorMeasurePass)
add_subdirectory(FLIPPass)
add_subdirectory(GBuffer)
add_subdirectory(GBufferLite)
add_subdirectory(ImageLoader)
add_subdirectory(LinearizeDepth)
add_subdirectory(MinimalPathTracer)
add_subdirectory(ModulateIllumination)
add_subdirectory(NNAO)
add_subdirectory(NormalsToViewSpace)
add_subdirectory(NRDPass)
add_subdirectory(OptixDenoiser)
add_subdirectory(OverlaySamplePass)
add_subdirectory(PathTracer)
add_subdirectory(PixelInspectorPass)
add_subdirectory(RenderPassTemplate)
add_subdirectory(RTStochasticDepth)
add_subdirectory(RTXDIPass)
add_subdirectory(SceneDebugger)
add_subdirectory(SDFEditor)
add_subdirectory(SimplePostFX)
add_subdirectory(SSAO)
add_subdirectory(StochasticDepthNaive)
add_subdirectory(StochasticDepthStratfield)
add_subdirectory(SVAO)
add_subdirectory(SVGFPass)
add_subdirectory(TAA)
add_subdirectory(TestPasses)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(WARDiffPathTracer)
add_subdirectory(WhittedRayTracer)
add_subdirectory(RTAO)
add_subdirectory(HBAO)
